// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Updated Components/Buttons/IconButton IconButton types 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-4:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-4:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-6 path {
  fill: #ffffff;
}

.emotion-8 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: #E7E8FF;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-8:focus-visible:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-8:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-8:hover:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-8:active:not(:disabled) {
  background-color: #B9C0FF;
}

.emotion-10 {
  fill: #1552DD;
  width: 1rem;
  height: 1rem;
}

.emotion-10 path {
  fill: #1552DD;
}

.emotion-12 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-12:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-12:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-12:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-12:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

.emotion-17 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-17:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-17:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-17:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-17:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-21 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: #E7E8FF;
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-21:focus-visible:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-21:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-21:hover:not(:disabled) {
  background-color: #D6D8FF;
}

.emotion-21:active:not(:disabled) {
  background-color: #B9C0FF;
}

.emotion-25 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #1552DD;
  background-color: rgba(84,94,255,0);
  padding: 0.5rem;
  border-radius: 0.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-25:focus-visible:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-25:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-25:hover:not(:disabled) {
  background-color: rgba(84,94,255,0.06);
}

.emotion-25:active:not(:disabled) {
  background-color: rgba(84,94,255,0.14);
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <button
            className="emotion-4"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <button
            className="emotion-8"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-10"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <button
            className="emotion-12"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-10"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <button
            className="emotion-17"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <button
            className="emotion-21"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-10"
              />
            </span>
          </button>
        </div>
      </div>
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <button
            className="emotion-25"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-10"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Buttons/IconButton Overview 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  margin: -16px;
}

.emotion-3 {
  font-family: Roboto;
  font-weight: 400;
  line-height: 1.375rem;
  font-size: 1rem;
  letter-spacing: 0.015625rem;
  color: #1B214F;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <p
        className="emotion-3"
        id="a-universal-iconbutton-component-that-with-the-help-of-button-hold-the-icon-inside-it-and-makes-it-clickable-and-easily-accessible."
      >
        A universal IconButton component that with the help of Button hold the icon inside it and makes it clickable and easily accessible.
      </p>
    </div>
  </div>
</div>
`;

exports[`Storyshots Updated Components/Buttons/IconButton Playground 1`] = `
.emotion-0 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  position: relative;
  padding: 0.25rem;
}

.emotion-1 {
  margin: 1rem;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-3 {
  position: relative;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.emotion-4 {
  font-family: Roboto;
  font-weight: 500;
  line-height: 1.25rem;
  font-size: 0.875rem;
  letter-spacing: 0.015625rem;
  color: #ffffff;
  background-color: #175bf5;
  padding: 0.5rem;
  border-radius: 2.25rem;
  border: none;
  cursor: pointer;
  -webkit-transition: background-color,border 150ms linear;
  transition: background-color,border 150ms linear;
}

.emotion-4:focus-visible:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:disabled {
  opacity: 50%;
  cursor: not-allowed;
}

.emotion-4:hover:not(:disabled) {
  background-color: #1552DD;
}

.emotion-4:active:not(:disabled) {
  background-color: #1249C4;
}

.emotion-5 {
  padding: 0.125rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-6 {
  fill: #ffffff;
  width: 1rem;
  height: 1rem;
}

.emotion-6 path {
  fill: #ffffff;
}

<div
  className="emotion-0"
>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-2"
    >
      <div
        style={
          Object {
            "margin": 5,
          }
        }
      >
        <div
          className="emotion-3"
        >
          <button
            className="emotion-4"
            data-testid="icon-button"
            disabled={false}
            onClick={[Function]}
            type="button"
          >
            <span
              className="emotion-5"
              onClick={[Function]}
            >
              <span
                className="emotion-6"
              />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
